<resources>
    <string name="app_name">EPI_App</string>
    <string name="cerrar_app">Cerrar App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="ingresar">ingresar</string>
    <string name="registrarme_como_usuario">Registrarme como Usuario</string>
    <string name="ingresa_tu_correo">Correo Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="logo">logo</string>
    <string name="registro_de_nuevo_usuario">REGISTRO DE NUEVO USUARIO</string>
    <string name="edad_s_lo_n_meros">Edad (sólo números)</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="apellido_alumn">Apellido Alumn@</string>
    <string name="contrase_a_min_8_caracteres">Contraseña min. 8 caracteres</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="nombre_y_apellido_apoderado">Nombre y Apellido Apoderado</string>
    <string name="guardar_datos">guardar datos</string>
    <string name="has_montado_antes">¿HAS MONTADO ANTES?</string>
    <string name="nombre_alumn">Nombre Alumn@</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ponyname">TextView</string>
    <string name="ponyface">TODO</string>
    <string name="botonclases">TODO</string>
    <string name="botonpony">TODO</string>
    <string name="botonteam">TODO</string>
    <string name="botongallery">TODO</string>
    <string name="botontienda">TODO</string>
    <string name="loguito">TODO</string>
    <string name="fotos">TODO</string>
    <string name="home">Home</string>
    <string name="ponies">PONIES</string>
    <string name="galeria_fotos">GALERÍA DE FOTOS</string>
    <string name="tienda">TIENDA</string>
    <string name="nosotros">NOSOTROS</string>
    <string name="reservar_clase">RESERVAR CLASE</string>
    <string name="galeria_imagen">TODO</string>
    <string name="admin">APP MANAGER</string>
    <string name="menuimg">TODO</string>
    <string name="menuimg2">TODO</string>
    <string name="menuimg3">TODO</string>
    <string name="menuimg4">TODO</string>
    <string name="tv1">TextView</string>
    <string name="tv2">TextView</string>
    <string name="back">Volver</string>
    <string name="ver_clases_alum">VER CLASES CON ALUMNOS</string>
    <string name="ponyindividual">TODO</string>
    <string name="tv3">TextView</string>
    <string name="backTogallery">Volver a la Galería</string>
    <string name="itemGallery">TODO</string>
    <string name="email">TODO</string>
    <string name="tv6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="phototeam">TODO</string>
    <string name="guardarNueva">Guardar contraseña nueva</string>
    <string name="repetirNueva">Repetir contraseña nueva</string>
    <string name="contNueva">Contraseña nueva min 8 caracteres</string>
    <string name="mailregistrado">Correo electrónico registrado</string>
    <string name="chgPassword">CAMBIO DE CONTRASEÑA</string>
    <string name="nombre">NOMBRE:</string>
    <string name="apellido">APELLIDO:</string>
    <string name="edad">EDAD:</string>
    <string name="mail">CORREO:</string>
    <string name="apoderado">APODERADO:</string>
    <string name="guardar_clase">Guardar clase</string>
    <string name="eliminar">eliminar</string>
    <string name="guardar">guardar</string>
    <string name="modificar">Modificar</string>
    <string name="para_qu_d_a_es_la_clase">Para qué día es la clase?</string>
    <string name="profesor">Profesor</string>
    <string name="nombre_caballos_disponibles">Nombre caballos disponibles separados por (,)</string>

    <string name="agregar_clases">AGREGAR CLASES</string>
    <string name="nivel">Nivel</string>
    <string name="ver_mis_clases">ver mis clases</string>
    <string name="agendar_clase">agendar clase</string>
    <string name="reservaste">UNA CLASE PARA EL DÍA:</string>
    <string name="clases_disponibles">CLASES DISPONIBLES</string>
    <string name="tus_clases">TUS CLASES</string>
    <string name="pony_o_cupo">pony</string>
    <string name="volver">Volver</string>
    <string name="ver_mis_clases_reservadas">Ver mis clases</string>
    <string name="titulo_nosotros">EQUIPO HUMANO DE LA EPI</string>
    <string name="nuestros_caballos">NUESTROS CABALLOS</string>
    <string name="team_humano">TEAM HUMANO</string>
    <string name="team_equino">TEAM EQUINO</string>
    <string name="alumnos_registrados">ALUMNOS REGISTRADOS</string>
    <string name="ingresar_clase">Ingresar clase</string>
    <string name="ver_clases">Ver clases</string>
    <string name="titulo_dialog">Administrador de Clases</string>
    <string name="msg_dialog">Qué desea hacer con la clase seleccionada?</string>
    <string name="eliminar_clase">ELIMINAR</string>
    <string name="modificar_clase">MODIFICAR</string>
    <string name="cancelar">CANCELAR</string>

    <string name="titulo_dialog2">Reservar Clases</string>
    <string name="msg_dialog2">Deseas agregar la clase seleccionada?</string>
    <string name="reserv_clase">AGREGAR</string>
    <string name="cancelar2">CANCELAR</string>
    <string name="hora_de_la_clase_12_00">Hora de la Clase (12:00)</string>
    <string name="cupos_disponibles">Cupos disponibles</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="confirmar_y_pagar">Confirmar y Pagar</string>
    <string name="titulo_clases_elegidas">LAS CLASES QUE ELEGISTE SON:</string>
    <string name="precio">$18.000</string>


    <string-array name="level_list">
        <item>Elige Nivel de la clase:</item>
        <item>Baby Pony</item>
        <item>Prebásico</item>
        <item>Básico</item>
        <item>Intermedio Avanzado</item>

    </string-array>

    <string-array name="profes_list">
        <item>Elige Profesor:</item>
        <item>Sharon Lassalle</item>
        <item>Tomás Van Cauwelaert</item>
        <item>Jean-Pierre Lassalle</item>


    </string-array>

</resources>
