<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/crushed"
            android:text="@string/registro_de_nuevo_usuario"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/regNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:hint="@string/nombre_alumn"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/titulo"/>

        <EditText
            android:id="@+id/regApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:hint="@string/apellido_alumn"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regNombre"/>

        <EditText
            android:id="@+id/regEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="number"
            android:hint="@string/edad_s_lo_n_meros"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regApellido"/>



        <EditText
            android:id="@+id/regMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:hint="@string/correo_electr_nico"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regEdad"/>

        <EditText
            android:id="@+id/regPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/contrase_a_min_8_caracteres"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regMail"/>

        <EditText
            android:id="@+id/regPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/repetir_contrase_a"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regPass"/>

        <EditText
            android:id="@+id/regApoderado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:hint="@string/nombre_y_apellido_apoderado"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/regPass2"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/crushed"
            android:text="@string/has_montado_antes"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/regApoderado"/>

        <Button
            android:id="@+id/btnGuardarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_redondeado"
            android:fontFamily="@font/crushed"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/guardar_datos"
            app:layout_constraintTop_toBottomOf="@id/checkBox"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>