<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".HomeFragment">

    <ImageButton
        android:id="@+id/botClase"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:background="#ffffff"
        android:contentDescription="@string/botonclases"
        android:elevation="5dp"

        android:scaleType="centerInside"
        android:src="@drawable/botclase"
        app:layout_constraintEnd_toStartOf="@+id/botPony"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botPony"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="#ffffff"
        android:contentDescription="@string/botonpony"
        android:scaleType="centerInside"
        android:src="@drawable/botponies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botTeam"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="130dp"
        android:background="#ffffff"
        android:contentDescription="@string/botonteam"
        android:scaleType="fitCenter"
        android:src="@drawable/botteam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botGallery" />

    <ImageButton
        android:id="@+id/botGallery"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:background="#ffffff"
        android:contentDescription="@string/botongallery"
        android:scaleType="fitCenter"
        android:src="@drawable/botgaleria"
        app:layout_constraintEnd_toStartOf="@+id/botTienda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botClase" />

    <ImageButton
        android:id="@+id/botTienda"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#ffffff"
        android:contentDescription="@string/botontienda"
        android:scaleType="fitCenter"
        android:src="@drawable/bottienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botPony" />

    <Button
        android:id="@+id/botAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botTeam" />


</androidx.constraintlayout.widget.ConstraintLayout>