<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ClaseReservadaFragment">

    <TextView
        android:id="@+id/titulo6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crushed"
        android:text="@string/titulo_clases_elegidas"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMisClases"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/botPagarClase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/crushed"
        android:text="@string/confirmar_y_pagar"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/botClaseReservadaBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="605dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/crushed"
        android:text="@string/volver"
        android:textSize="20sp"
        />
</FrameLayout>