<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".paraDespues.ItemPonyFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvPonyNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv1"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/crushed"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvPonyNombre"/>

            <ImageView
                android:id="@+id/ivPonyIndiv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/ponyindividual"
                app:layout_constraintTop_toBottomOf="@id/tvPonyNombre"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/ivPonyIndiv"/>

            <TextView
                android:id="@+id/tvPonyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv2"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/ivPonyIndiv"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/botBackPony"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_redondeado"
        android:fontFamily="@font/crushed"
        android:textSize="20sp"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"/>

</FrameLayout>