<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminFragment">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crushed"
        android:text="@string/alumnos_registrados"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAdmin"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/botAdminIngClase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_redondeado"
        android:layout_marginTop="550dp"
        android:text="@string/ingresar_clase"
        android:fontFamily="@font/crushed"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/recyclerAdmin"/>

    <Button
        android:id="@+id/botAdminHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_redondeado"
        android:layout_marginTop="605dp"
        android:text="@string/home"
        android:fontFamily="@font/crushed"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/recyclerAdmin"/>
</FrameLayout>