<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".paraDespues.ItemGalleryFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivGalleryItem"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/itemGallery"
                app:layout_constraintTop_toTopOf="parent"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/ivGalleryItem"/>

            <TextView
                android:id="@+id/tvGalleryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv3"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/ivGalleryItem"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/botBackGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:fontFamily="@font/crushed"
        android:textSize="20sp"
        android:text="@string/backTogallery"
        app:layout_constraintTop_toTopOf="parent"/>

</FrameLayout>